Editing an Image Editor

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,5 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import '.\\vendor\\awcodes\\filament-tiptap-editor\\resources\\css\\plugin.css';
+
